# xfw

./: Cargo.toml  README.md
.cargo/: config.toml
xdp-fw/: Cargo.toml  build.rs
xdp-fw-common/: Cargo.toml
xdp-fw-common/src/: lib.rs
xdp-fw-common/src/logs/: logs.rs
xdp-fw-common/src/rules/: rules.rs
xdp-fw-ebpf/: Cargo.toml
xdp-fw-ebpf/src/: firewall.rs  main.rs  parse.rs
xdp-fw/src/: app.rs  cli.rs  command.rs  event.rs  lib.rs  loader.rs  main.rs  tui.rs  ui.rs  util.rs
