[workspace]
resolver = "2"
members = ["xdp-fw", "xdp-fw-common"]
default-members = ["xdp-fw", "xdp-fw-common"]

# eBPF artifact is built by `xdp-fw`’s `build.rs`; keep it path-only to avoid duplicate `xdp-fw` bin names in one target dir.

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.release.package.xdp-fw-ebpf]
debug = 2
codegen-units = 1
strip = false
