[package]
name = "xdp-fw-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-fw-common = { path = "../xdp-fw-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"
[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-fw"
path = "src/main.rs"
