[package]
name = "xdp-fw-ebpf"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "xdp-fw"
path = "src/main.rs"

[dependencies]
xdp-fw-common = { path = "../xdp-fw-common" }

aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
network-types = "0.1.0"

[build-dependencies]
which = { version = "6.0.0", default-features = false }
