[package]
name = "xdp-fw"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
xdp-fw-common = { path = "../xdp-fw-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
xdp-fw-ebpf = { path = "../xdp-fw-ebpf" }

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "xdp-fw"
path = "src/main.rs"
