[package]
name = "xdp-fw"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
xdp-fw-common = { path = "../xdp-fw-common", features = ["user"] }

anyhow = { version = "1", default-features = true }
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
] }
clap = { version = "4.5.20", default-features = false, features = ["std", "derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
rand = "0.10.1"

[build-dependencies]
anyhow = { version = "1", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
xdp-fw-ebpf = { path = "../xdp-fw-ebpf" }

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "xdp-fw"
path = "src/main.rs"
